package NYT.NChunkServer.NProto;

import "yt/ytlib/misc/guid.proto";
import "yt/ytlib/node_tracker_client/node_tracker_service.proto";

////////////////////////////////////////////////////////////////////////////////

message TMetaReqUpdateChunkReplicationFactor
{
    message TUpdate
    {
        required NYT.NProto.TGuid chunk_id = 1;
        required int32 replication_factor = 2;
    }

    repeated TUpdate updates = 1;
}

////////////////////////////////////////////////////////////////////////////////

