package NYT.NMetaState.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqReadSnapshot
{
    required int32 SnapshotId = 1;
    required int64 Offset = 2;
    required int32 Length = 3;
}

message TRspReadSnapshot
{
    optional int32 BytesRead = 1;
    // Snapshot data is passed via attachment.
}

////////////////////////////////////////////////////////////////////////////////

message TReqReadChangeLog
{
    required int32 ChangeLogId = 1;
    required int32 StartRecordId = 2;
    required int32 RecordCount = 3;
}

message TRspReadChangeLog
{
    optional int32 RecordsRead = 2;
    // Changelog records are passed via attachments
    // (one attachment per record).
}

////////////////////////////////////////////////////////////////////////////////

message TReqGetSnapshotInfo
{
    required int32 SnapshotId = 1;
}

message TRspGetSnapshotInfo
{
    optional int64 Length = 1;
    optional uint64 Checksum = 2;
    optional int32 PrevRecordCount = 3;
}

////////////////////////////////////////////////////////////////////////////////

message TReqGetChangeLogInfo
{
    required int32 ChangeLogId = 1;
}

message TRspGetChangeLogInfo
{
    optional int32 RecordCount = 2;
}
                                                                              
////////////////////////////////////////////////////////////////////////////////

message TReqPingFollower
{
    required int32 SegmentId = 1;
    required int32 RecordCount = 2;
    required bytes Epoch = 3;
    required int32 MaxSnapshotId = 4;
}

message TRspPingFollower
{
    required int32 Status = 1;
}
                                                                              
////////////////////////////////////////////////////////////////////////////////

message TReqApplyChanges
{
    required int32 SegmentId = 1;
    required int32 RecordCount = 2;
    required bytes Epoch = 3;
    // Data of changes are passed via attachment.
}

message TRspApplyChanges
{
    optional bool Committed = 1;
}
                                                                              
////////////////////////////////////////////////////////////////////////////////

message TReqAdvanceSegment
{
    required int32 SegmentId = 1;
    required int32 RecordCount = 2;
    required bytes Epoch = 3;
    required bool CreateSnapshot = 4;
}

message TRspAdvanceSegment
{
    optional uint64 Checksum = 1;
}
                                                                              
////////////////////////////////////////////////////////////////////////////////
